// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > Année incomplète 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: undefined"
`;

exports[`calculate simulations-indépendant > Année incomplète 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3620
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1242
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2078
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . totale: 3620"
`;

exports[`calculate simulations-indépendant > Année incomplète 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7075
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1449
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5152
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . totale: 7075"
`;

exports[`calculate simulations-indépendant > Année incomplète 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 13947
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2828
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10299
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 13947"
`;

exports[`calculate simulations-indépendant > Année incomplète 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 139889
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 29730
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 103002
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73824
indépendant . rémunération . totale: 139889"
`;

exports[`calculate simulations-indépendant > Année incomplète 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1270379
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 152974
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1035065
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528585
indépendant . rémunération . totale: 1270379"
`;

exports[`calculate simulations-indépendant > DROM 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 20000

Notifications affichées : indépendant . cotisations et contributions . cotisations . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 72554
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 17228
indépendant . cotisations et contributions . début activité: 1712
indépendant . revenu professionnel: 51557
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41367
indépendant . rémunération . totale: 72554"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28287
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6139
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20607
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19433
indépendant . rémunération . totale: 28287"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28315
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6145
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20608
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19433
indépendant . rémunération . totale: 28315"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 87279
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 87279"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 72810
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 72810"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 58798
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 58798"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 78898
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 18699
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51693
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41327
indépendant . rémunération . totale: 78898"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 80551
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 19097
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51729
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41316
indépendant . rémunération . totale: 80551"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 85249
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 20274
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51829
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41286
indépendant . rémunération . totale: 85249"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 74804
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 14149
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51605
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41353
indépendant . rémunération . totale: 74804"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 74804
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 11633
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51605
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41353
indépendant . rémunération . totale: 74804"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 678955
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 91937
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 517914
indépendant . rémunération . nette: 500000
indépendant . rémunération . nette . après impôt: 281989
indépendant . rémunération . totale: 678955"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 20000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 300000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 300000"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: 3427
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 50000"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1333
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1066
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 115
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100
indépendant . rémunération . totale: 1333"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 218
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 0
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 100
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100
indépendant . rémunération . totale: 218"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 971
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 39
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 804
indépendant . rémunération . nette: 800
indépendant . rémunération . nette . après impôt: 800
indépendant . rémunération . totale: 971"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 45000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 9000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: undefined
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 10000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 15000"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 55000"
`;

exports[`calculate simulations-indépendant > imposition à l'IR 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 23055
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 71795
indépendant . rémunération . nette: 69649
indépendant . rémunération . nette . après impôt: 54945
indépendant . rémunération . totale: 100000"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28287
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6139
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20607
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 17939
indépendant . rémunération . totale: 28287"
`;

exports[`calculate simulations-indépendant > inversions IR 1`] = `
"entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 3939
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 13987
indépendant . rémunération . nette: 13579
indépendant . rémunération . nette . après impôt: 13579
indépendant . rémunération . totale: 19000"
`;

exports[`calculate simulations-indépendant > inversions IR 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 13947
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2828
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10299
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 13947"
`;

exports[`calculate simulations-indépendant > inversions IR 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 62012
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 15208
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 43566
indépendant . rémunération . nette: 42235
indépendant . rémunération . nette . après impôt: 36000
indépendant . rémunération . totale: 62012"
`;

exports[`calculate simulations-indépendant > inversions IS 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 13947
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2828
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10299
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 13947"
`;

exports[`calculate simulations-indépendant > inversions IS 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 13947
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2828
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10299
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 13947"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1819
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1105
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 529
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500
indépendant . rémunération . totale: 1819"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 2428
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1155
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1046
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
indépendant . rémunération . totale: 2428"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3036
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1204
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1564
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500
indépendant . rémunération . totale: 3036"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3620
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1242
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2078
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . totale: 3620"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7075
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1449
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5152
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . totale: 7075"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 13947
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2828
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10299
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 13947"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 139889
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 29730
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 103002
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73824
indépendant . rémunération . totale: 139889"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1270379
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 152974
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1035065
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528585
indépendant . rémunération . totale: 1270379"
`;
